fixed name and appName

--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -23,6 +23,8 @@ spec:
         repoURL: '{{repoURL}}'
         targetRevision: HEAD
         path: '{{path}}'
+        directory:
+          recurse: true  # ✅ Helm wird NICHT verwendet
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{namespace}}'
