--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -1,34 +1,39 @@
 apiVersion: argoproj.io/v1alpha1
-kind: ApplicationSet
+kind: Application
 metadata:
-  name: root-applicationset
+  name: root
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
-  generators:
-  - list:
-      elements:
-      - appName: gitops-test
-        repoURL: https://github.com/mtvier/gitops_test.git
-        path: apps/
-        namespace: default
-      - appName: mysql-cluster
-        repoURL: https://github.com/mtvier/my_k8s_service.git
-        path: apps/
-        namespace: my_k8s_service
-  template:
-    metadata:
-      name: '{{appName}}'
-    spec:
-      project: default
-      source:
-        repoURL: '{{repoURL}}'
-        targetRevision: HEAD
-        path: '{{path}}'
-        directory:
-          recurse: true  # ✅ Helm wird NICHT verwendet
-      destination:
-        server: https://kubernetes.default.svc
-        namespace: '{{namespace}}'
-      syncPolicy:
-        automated:
-          prune: true
-          selfHeal: true
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: default
+  project: default
+  source:
+    path: apps/
+    repoURL: https://github.com/mtvier/gitops_test.git
+    targetRevision: HEAD
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: my_k8s_service
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: my_k8s_service
+  project: default
+  source:
+    path: mysql/
+    repoURL: https://github.com/mtvier/my_k8s_service.git
+    targetRevision: HEAD
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
