--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -27,7 +27,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: my-k8s-service
+    namespace: default
   project: default
   source:
     path: apps/
